@@ -8,7 +8,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
 import csd.t6.backend.glossary.dto.request.GlossaryUpdateRequest;
-import io.jsonwebtoken.lang.Collections;
 
 @RestController
 @RequestMapping("/api/ai")
@@ -22,6 +21,6 @@ public class AIController {
 
   @GetMapping("relations")
   public List<GlossaryUpdateRequest> getTagRelations(@RequestBody List<String> tags) {
-    return aiService.generateTags(tags, Collections.emptyList());
+    return aiService.generateTags(tags, List.of(), List.of());
   }
 }
